--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -16,10 +16,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.7.0
+        with:
+          ssh-private-key: ${{ secrets.SYNC_SSH_PRIVATE_KEY }}
+      
       - name: Set up Git credentials
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
+          
+          # Add GitHub to known hosts
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
       
       - name: Sync ot-setup repository
         run: |
