--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -11,18 +11,10 @@ on:
 jobs:
   sync-repositories:
     runs-on: ubuntu-latest
-    # Add permissions for the GITHUB_TOKEN
-    permissions:
-      contents: write
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
-      # Use pre-installed GitHub CLI instead of setup action
-      - name: Configure GitHub CLI authentication
-        run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
       
       - name: Sync ot-setup repository
         run: |
@@ -37,9 +29,8 @@ jobs:
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           
-          # Use git push instead of gh repo sync
-          # Configure GitHub remote with token
-          git remote add github https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/opencloud-community/ot-setup.git
+          # Configure GitHub remote with PAT
+          git remote add github https://x-access-token:${{ secrets.SYNC_PAT }}@github.com/opencloud-community/ot-setup.git
           
           # Push to GitHub target repository
           git push --mirror github
@@ -61,9 +52,8 @@ jobs:
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           
-          # Use git push instead of gh repo sync
-          # Configure GitHub remote with token
-          git remote add github https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/opencloud-community/ot-docs.git
+          # Configure GitHub remote with PAT
+          git remote add github https://x-access-token:${{ secrets.SYNC_PAT }}@github.com/opencloud-community/ot-docs.git
           
           # Push to GitHub target repository
           git push --mirror github
